attached_assets/Pasted---1764043276170_1764043276171.txt
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
█ ▄▄▄▄▄ █▄▄▄ ▀▄▀█ █ ▄▄▄▄▄ █
█ █   █ ██▄▀ █  ▄▄█ █   █ █
█ █▄▄▄█ ██▀▄ ▄█▀█▀█ █▄▄▄█ █
█▄▄▄▄▄▄▄█ ▀▄█ ▀▄▀ █▄▄▄▄▄▄▄█
█▄▄█▄ ▀▄█▀▄▀█▄▀█▀ █▄█▀█▀▀▄█
███ █▀ ▄██▄██▄▄▄▄ ▀███▄▀▀ █
█  ▀█ ▄▄▄█▄ █▀█▄ █ ▄▀▀█▀ ██
█ ▄ ▀█ ▄███▄█▀▄▀ ▄▀ ██▄▀  █
█▄██▄██▄█  ▀ ▄▄ █ ▄▄▄  ▄▀▄█
█ ▄▄▄▄▄ ██▄█▀▄  █ █▄█ ███ █
█ █   █ █ █▀▄ ▀█▄ ▄  ▄ █▀▀█
█ █▄▄▄█ █▀▄  ▀█▄ ▄█▀▀▄█   █
█▄▄▄▄▄▄▄█▄█▄▄██▄▄▄▄█▄▄███▄█

› Metro waiting on exp://192.168.1.135:8081
› Scan the QR code above with Expo Go (Android) or the Camera app (iOS)

› Web is waiting on http://localhost:8081

› Using Expo Go
› Press s │ switch to development build

› Press a │ open Android
› Press i │ open iOS simulator
› Press w │ open web

› Press j │ open debugger
› Press r │ reload app
› Press m │ toggle menu
› shift+m │ more tools
› Press o │ open project code in your editor

› Press ? │ show all commands

Logs for your project will appear below. Press Ctrl+C to exit.
› Opening on iOS...
› Opening exp://192.168.1.135:8081 on iPhone 17 Pro
› Opening the iOS simulator, this might take a moment.
› Press ? │ show all commands
Unable to resolve asset "./assets/images/android-icon-monochrome.png" from "android.adaptiveIcon.monochromeImage" in your app.json or app.config.js
iOS Bundling failed 1600ms index.js (1571 modules)
Unable to resolve "../assets/images/empty-states/camera.png" from "screens/AIScanScreen.tsx"
  75 |       <View style={styles.emptyState}>
  76 |         <Image
> 77 |           source={require("../assets/images/empty-states/camera.png")}
     |                            ^
  78 |           style={styles.emptyImage}
  79 |           resizeMode="contain"
  80 |         />

Import stack:

 screens/AIScanScreen.tsx
 | import "../assets/images/empty-states/camera.png"

 navigation/AIScanStackNavigator.tsx
 | import "../screens/AIScanScreen"

 navigation/MainTabNavigator.tsx
 | import "./AIScanStackNavigator"

 navigation/RootNavigator.tsx
 | import "./MainTabNavigator"

 App.tsx
 | import "./navigation/RootNavigator"

 index.js
 | import "./App"

 
 | import "./index"

› Reloading apps
Unable to resolve asset "./assets/images/icon.png" from "icon" in your app.json or app.config.js
iOS Bundling failed 468ms index.js (1401 modules)
 ERROR  SyntaxError: /Users/masongallegos/adventure-time/components/HeaderTitle.tsx: Identifier 'ThemedText' has already been declared. (11:7)

   9 | import ScreenScrollView from "@/components/ScreenScrollView";
  10 |
> 11 | import ThemedText from "@/components/ThemedText";
     |        ^
  12 | import { useTheme } from "@/hooks/useTheme";
  13 | import { AIScanStackParamList } from "@/navigation/AIScanStackNavigator";
  14 |
